; ModuleID = '/home/carl/AnghaBench/esp-idf/examples/bluetooth/esp_ble_mesh/ble_mesh_console/ble_mesh_provisioner/main/extr_ble_mesh_adapter.c_ble_mesh_set_node_prestore_params.c'
source_filename = "/home/carl/AnghaBench/esp-idf/examples/bluetooth/esp_ble_mesh/ble_mesh_console/ble_mesh_provisioner/main/extr_ble_mesh_adapter.c_ble_mesh_set_node_prestore_params.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@ble_mesh_node_sema = common dso_local global i32 0, align 4
@portMAX_DELAY = common dso_local global i32 0, align 4
@NODE_MAX_GROUP_CONFIG = common dso_local global i64 0, align 8
@ble_mesh_node_prestore_params = common dso_local global %struct.TYPE_2__* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ble_mesh_set_node_prestore_params(i64 %0, i64 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store i64 %0, i64* %3, align 8
  store i64 %1, i64* %4, align 8
  %6 = load i32, i32* @ble_mesh_node_sema, align 4
  %7 = load i32, i32* @portMAX_DELAY, align 4
  %8 = call i32 @xSemaphoreTake(i32 %6, i32 %7)
  store i64 0, i64* %5, align 8
  br label %9

9:                                                ; preds = %41, %2
  %10 = load i64, i64* %5, align 8
  %11 = load i64, i64* @NODE_MAX_GROUP_CONFIG, align 8
  %12 = icmp ult i64 %10, %11
  br i1 %12, label %13, label %44

13:                                               ; preds = %9
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** @ble_mesh_node_prestore_params, align 8
  %15 = load i64, i64* %5, align 8
  %16 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i64 %15
  %17 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = icmp ne i32 %18, 65535
  br i1 %19, label %20, label %40

20:                                               ; preds = %13
  %21 = load %struct.TYPE_2__*, %struct.TYPE_2__** @ble_mesh_node_prestore_params, align 8
  %22 = load i64, i64* %5, align 8
  %23 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %21, i64 %22
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 4
  %26 = icmp ne i32 %25, 65535
  br i1 %26, label %27, label %40

27:                                               ; preds = %20
  %28 = load i64, i64* %3, align 8
  %29 = trunc i64 %28 to i32
  %30 = load %struct.TYPE_2__*, %struct.TYPE_2__** @ble_mesh_node_prestore_params, align 8
  %31 = load i64, i64* %5, align 8
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %30, i64 %31
  %33 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %32, i32 0, i32 0
  store i32 %29, i32* %33, align 4
  %34 = load i64, i64* %4, align 8
  %35 = trunc i64 %34 to i32
  %36 = load %struct.TYPE_2__*, %struct.TYPE_2__** @ble_mesh_node_prestore_params, align 8
  %37 = load i64, i64* %5, align 8
  %38 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %36, i64 %37
  %39 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %38, i32 0, i32 1
  store i32 %35, i32* %39, align 4
  br label %40

40:                                               ; preds = %27, %20, %13
  br label %41

41:                                               ; preds = %40
  %42 = load i64, i64* %5, align 8
  %43 = add i64 %42, 1
  store i64 %43, i64* %5, align 8
  br label %9

44:                                               ; preds = %9
  %45 = load i32, i32* @ble_mesh_node_sema, align 4
  %46 = call i32 @xSemaphoreGive(i32 %45)
  ret void
}

declare dso_local i32 @xSemaphoreTake(i32, i32) #1

declare dso_local i32 @xSemaphoreGive(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
